--- a/app/src/main/res/layout/reply_popup.xml
+++ b/app/src/main/res/layout/reply_popup.xml
@@ -46,6 +46,7 @@
             </LinearLayout>
 
             <EditText
+                android:id="@+id/body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -70,6 +71,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/confirm"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -78,6 +80,7 @@
                     android:textColor="?attr/colorAccent" />
 
                 <Button
+                    android:id="@+id/cancel"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
