--- a/app/src/main/res/layout/thread_item.xml
+++ b/app/src/main/res/layout/thread_item.xml
@@ -19,28 +19,30 @@
         <TextView
             android:id="@+id/tid"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:visibility="gone"
-                    android:contentDescription="@null" />
-                
+                    android:contentDescription="@null"
+                    android:visibility="gone" />
+
                 <ProgressBar
                     android:id="@+id/imgLoading"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:padding="24dp"/>
+                    android:padding="24dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -55,6 +57,7 @@
                     android:layout_marginStart="6dp"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="6dp"
+                    android:gravity="center"
                     android:text="Test Thread..."
                     android:textSize="21sp" />
 
@@ -82,8 +85,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
-                android:visibility="gone"
-                android:text="Report" />
+                android:text="Report"
+                android:visibility="gone" />
 
             <View
                 android:layout_width="0dp"
